add auth via Github

--- a/my-project/myapp/.env
+++ b/my-project/myapp/.env
@@ -25,6 +25,7 @@ app.baseURL = 'http://localhost:8000/'
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
+app.appTimezone = 'America/Sao_Paulo'
 
 #--------------------------------------------------------------------
 # DATABASE
